Fixing z-index issues. Fixing styles for select fields.

--- a/sass/compat/themes/leadengine/_checkout-steps.scss
+++ b/sass/compat/themes/leadengine/_checkout-steps.scss
@@ -2,6 +2,10 @@
 // CHECKOUT STEPS
 // ------------------------------------
 
+body#{ $_body-theme-selector } .fc-wrapper .tt_button {
+	z-index: z( 'default' );
+}
+
 body#{ $_body-theme-selector } .fc-wrapper .tt_button.fc-place-order-button{
 	-webkit-font-smoothing: auto;
 }
